--- a/faraway/frontend/index.html
+++ b/faraway/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Patient Portal | IMC</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <title>Patient Portal</title>
   </head>
   <body>
     <div id="root"></div>
